--- a/src/styles/DailyBonus.css
+++ b/src/styles/DailyBonus.css
@@ -7,7 +7,7 @@
 /* スマホ・タブレット縦 */
 @media (max-width: 768px) {
   .daily-bonus-tube-container {
-    top: 160px;
+    top: 140px;
     right: 0px;
   }
   .bonus-tube-vertical {
@@ -19,7 +19,7 @@
 /* PC・タブレット横 */
 @media (min-width: 769px) {
   .daily-bonus-tube-container {
-    top: 193px;
+    top: 170px;
     right: 330px;
   }
   .bonus-tube-vertical {
